# rng-100

./: .gitignore  .release-it.json  CHANGELOG.md  Cargo.toml  README.md  astro.config.mjs  biome.json  eslint.config.mjs  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.mjs  tsconfig.json  tsconfig.options.json  turbo.json
.github/workflows/: release.yml
apps/web/: astro.config.mjs  package.json  tailwind.config.mjs  tailwind.config.ts  tsconfig.json  ui.config.json
apps/web/src/: App.tsx  app.css  constants.ts  globals.css
apps/web/src/components/: RandomNumber.tsx
apps/web/src/components/ui/: button.tsx
apps/web/src/layouts/: Layout.astro
apps/web/src/pages/: index.astro
apps/web/src/stores/: state.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: Welcome.astro
src/pages/: index.astro
