[workspace]
resolver = "3"
members = ["src-tauri"]

[workspace.package]
version = "0.2.0"
authors = ["andots"]
edition = "2021"
rust-version = "1.84.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
incremental = false
opt-level = "s"
strip = true
